support mac and fix img alignment

--- a/html/css/html4css1.css
+++ b/html/css/html4css1.css
@@ -294,3 +294,6 @@ h4 tt.docutils, h5 tt.docutils, h6 tt.docutils {
 
 ul.auto-toc {
   list-style-type: none }
+
+img.align-middle {
+    vertical-align: middle }
